fixed the content visibility issue on first section of home page

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,4 +1,4 @@
-.Home {
+*{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -22,26 +22,33 @@ font-family: 'Poppins', sans-serif;
 
 .hero {
   display: flex;
-  height: 100vh;
+  height:auto;
+  /* width: ; */
+  aspect-ratio: 16 / 9; 
   position: relative;
   overflow: hidden;
   background-color: black;
+  max-width: 100%;
   background-size: cover; /* Makes the background image cover the entire container */
   background-position: center center;
+  /* margin-top: 8%; */
   background-image: url('./Images/Home.jpeg');
 }
 
 /* Media queries for responsiveness */
 @media only screen and (max-width: 768px) {
   .hero {
-    background-size: contain; /* Adjust for smaller screens */
+    background-size: cover; /* Adjust for smaller screens */
     background-repeat: no-repeat;
     background-position: top;
     zoom: normal;
+    /* max-width: 100%; */
+    /* height: 100vh; */
   }
 
   .content{
     width: 90%;
+    /* margin:8%; */
   }
 
   .content h1{
@@ -64,7 +71,7 @@ font-family: 'Poppins', sans-serif;
   text-align: left;
   justify-content: left;
   align-items: left;
-  margin-top: 10%; /* Adjusted for responsiveness */
+  margin-top: 10%; /*Adjusted for responsiveness*/
   padding: 0 20px; /* Added padding for responsiveness */
 }
 
@@ -120,7 +127,7 @@ font-family: 'Poppins', sans-serif;
 
 /*Jhalak's code  */
 .course{
-  padding: 50px 0;
+  padding: 100px 0;
   background-color: black;
 }
 
@@ -161,8 +168,6 @@ font-family: 'Poppins', sans-serif;
   color: white;
   /* font-family: 'Poppins',sans-serif; */
   font-size: 28px;
-  margin: 3vw;
-  text-align: justify;
 }
 
 .list{
@@ -201,7 +206,6 @@ font-family: 'Poppins', sans-serif;
   margin-left: 8px;
   margin-right: 8px;
   display: inline-block;
-  text-align: justify;
 }
 
 @media screen and (max-width: 600px){
@@ -253,6 +257,7 @@ font-family: 'Poppins', sans-serif;
   background-color: #222222;
   color: #fff;
   height: 100vh;
+  width: 98.7vw;
   text-align: center;
   /* margin: 0 10px; */
   /* overflow-x: hidden !important; */
